[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
askama = "0.12.1"
axum = "0.7.4"
failure = "0.1.8"
spin_sleep = "1.2.0"
structopt = "0.3.26"
termion = "3.0.0"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
